# dali_cli

./: .gitignore  .gitmodules  99-lunatone-dali.rules  README.md  pyproject.toml  setup.py
.github/backup/workflows/: mega-linter.yml
.github/megalinter/: cspell.json  mega-linter.yml  pylintrc  pyrightconfig.json
.github/workflows/: mega-linter.yml
dali/: dali.py  dali_cli.py  dali_serial.py
dali.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dali/DALI/: address_byte.py  error.py  frame.py  raw_frame.py
dali/DALI/connection/: hid.py  lunatone.py  mock.py  serial.py
dali/DALI/device/: device_action.py  device_address.py  device_configure.py  device_dump.py  device_enumerate.py  device_numerate.py  device_opcode.py  device_query.py  device_special.py
dali/DALI/gear/: action.py  address.py  clear.py  configure.py  dump.py  gear_action.py  gear_address.py  gear_clear.py  gear_configure.py  gear_dump.py  gear_enumerate.py  gear_level.py  level.py  (+10 more)
dali/dali.egg-info/: PKG-INFO  SOURCES.txt
dali/gear/: query.py  summary.py
source/: dali.py  dali_lunatone.py  dali_serial.py  setup.py
source/DALI/: address_byte.py  forward_frame_16bit.py
source/dali.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
source/gear/: configure.py  level.py  list.py  query.py  special.py
tests/: requirements.txt  test_dali_cli.sh
tests/cli/: test_basic.py  test_configure.py  test_device_configure.py  test_device_query.py  test_device_special.py  test_gear_basic.py  test_gear_configure.py  test_gear_query.py  test_gear_special.py  test_special.py
(+3 files in other folders)
