[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dali"
version = "0.2.4"
description = "Command line interface to control a DALI system"
authors = [
    {name = "Sven Hädrich", email="sven.haedrich@sevenlab.de"},
]
dependencies = [
    "click", "dali-interface @ git+https://github.com/sevenlab-de/dali_interface.git", "pyserial", "pyusb", "termcolor", "typeguard",
]

[project.scripts]
dali = "dali.dali_cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["dali*"]
